parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> N
Rule 1     N -> element NEWLINE N
Rule 2     N -> element
Rule 3     N -> <empty>
Rule 4     element -> stmt
Rule 5     stmt -> IDENTIFIER ASSIGNMENT exp
Rule 6     stmt -> BAHIRA
Rule 7     stmt -> ARKO
Rule 8     stmt -> IDENTIFIER MA dynamString LEKHA SEMICOLON
Rule 9     stmt -> IDENTIFIER MA dynamString LEKHA
Rule 10    stmt -> IDENTIFIER BATA IDENTIFIER LEU
Rule 11    stmt -> IDENTIFIER BANDAGARA
Rule 12    stmt -> IDENTIFIER DEKHAU
Rule 13    stmt -> IDENTIFIER LUKAU
Rule 14    stmt -> IDENTIFIER BANAU
Rule 15    stmt -> IDENTIFIER METAU
Rule 16    stmt -> IDENTIFIER MA IDENTIFIER KORA variableexp
Rule 17    stmt -> dynamString LEKHA
Rule 18    stmt -> dynamString LEKHA SEMICOLON
Rule 19    stmt -> IDENTIFIER LEU
Rule 20    stmt -> IDENTIFIER incrementsign ASSIGNMENT exp
Rule 21    stmt -> YEDI condition NEWLINE cmpdstmt optelse DIYE
Rule 22    stmt -> SABEI IDENTIFIER ASSIGNMENT exp DEKHI exp SEMICOLON sign exp NEWLINE cmpdstmt BAISA
Rule 23    stmt -> SABEI IDENTIFIER ASSIGNMENT exp DEKHI exp NEWLINE cmpdstmt BAISA
Rule 24    stmt -> JABA SAMMA whilecond NEWLINE cmpdstmt BAJA
Rule 25    stmt -> IDENTIFIER ASSIGNMENT LGPARA variableexp RGPARA
Rule 26    stmt -> KAAM IDENTIFIER LPARA variableArgs RPARA NEWLINE cmpdstmt MAKA
Rule 27    stmt -> IDENTIFIER LPARA variableexp RPARA
Rule 28    stmt -> exp PATHAU
Rule 29    stmt -> NEWLINE
Rule 30    variableArgs -> IDENTIFIER COMMA variableArgs
Rule 31    variableArgs -> IDENTIFIER
Rule 32    variableArgs -> <empty>
Rule 33    variableexp -> exp COMMA variableexp
Rule 34    variableexp -> exp
Rule 35    variableexp -> <empty>
Rule 36    exp -> exp EQ exp
Rule 37    exp -> exp LE exp
Rule 38    exp -> exp GE exp
Rule 39    exp -> exp NE exp
Rule 40    exp -> exp LT exp
Rule 41    exp -> exp GT exp
Rule 42    exp -> exp PLUS exp
Rule 43    exp -> exp MINUS exp
Rule 44    exp -> exp TIMES exp
Rule 45    exp -> exp DIVIDE exp
Rule 46    exp -> exp POWER exp
Rule 47    exp -> exp MODULUS exp
Rule 48    exp -> exp RA exp
Rule 49    exp -> exp WA exp
Rule 50    exp -> IDENTIFIER
Rule 51    exp -> STRING
Rule 52    exp -> NUMBER
Rule 53    exp -> MINUS NUMBER
Rule 54    exp -> SUNYA
Rule 55    exp -> LGPARA variableexp RGPARA
Rule 56    exp -> IDENTIFIER LGPARA exp RGPARA
Rule 57    exp -> LPARA exp RPARA
Rule 58    exp -> IDENTIFIER LGPARA sliceexp COLON sliceexp RGPARA
Rule 59    sliceexp -> exp
Rule 60    sliceexp -> <empty>
Rule 61    exp -> LPARA exp RPARA QUESTION exp COLON exp
Rule 62    exp -> IDENTIFIER LPARA variableexp RPARA
Rule 63    dynamString -> exp COMMA dynamString
Rule 64    dynamString -> exp
Rule 65    condition -> condition RA condition
Rule 66    condition -> condition WA condition
Rule 67    condition -> exp BHAE
Rule 68    condition -> exp NABHAE
Rule 69    cmpdstmt -> stmt NEWLINE cmpdstmt
Rule 70    cmpdstmt -> <empty>
Rule 71    optelse -> ATHAWA condition NEWLINE cmpdstmt optelse
Rule 72    optelse -> ATHAWA NEWLINE cmpdstmt
Rule 73    optelse -> <empty>
Rule 74    sign -> PLUS
Rule 75    sign -> MINUS
Rule 76    incrementsign -> sign
Rule 77    incrementsign -> TIMES
Rule 78    incrementsign -> DIVIDE
Rule 79    whilecond -> whilecond RA whilecond
Rule 80    whilecond -> whilecond WA whilecond
Rule 81    whilecond -> exp CHHA
Rule 82    whilecond -> exp CHHAINA

Terminals, with rules where they appear

ARKO                 : 7
ASSIGNMENT           : 5 20 22 23 25
ATHAWA               : 71 72
BAHIRA               : 6
BAISA                : 22 23
BAJA                 : 24
BANAU                : 14
BANDAGARA            : 11
BATA                 : 10
BHAE                 : 67
CHHA                 : 81
CHHAINA              : 82
COLON                : 58 61
COMMA                : 30 33 63
DEKHAU               : 12
DEKHI                : 22 23
DIVIDE               : 45 78
DIYE                 : 21
EQ                   : 36
GE                   : 38
GT                   : 41
IDENTIFIER           : 5 8 9 10 10 11 12 13 14 15 16 16 19 20 22 23 25 26 27 30 31 50 56 58 62
JABA                 : 24
KAAM                 : 26
KORA                 : 16
LE                   : 37
LEKHA                : 8 9 17 18
LEU                  : 10 19
LGPARA               : 25 55 56 58
LPARA                : 26 27 57 61 62
LT                   : 40
LUKAU                : 13
MA                   : 8 9 16
MAKA                 : 26
METAU                : 15
MINUS                : 43 53 75
MODULUS              : 47
NABHAE               : 68
NE                   : 39
NEWLINE              : 1 21 22 23 24 26 29 69 71 72
NUMBER               : 52 53
PATHAU               : 28
PLUS                 : 42 74
POWER                : 46
QUESTION             : 61
RA                   : 48 65 79
RGPARA               : 25 55 56 58
RPARA                : 26 27 57 61 62
SABEI                : 22 23
SAMMA                : 24
SEMICOLON            : 8 18 22
STRING               : 51
SUNYA                : 54
TIMES                : 44 77
WA                   : 49 66 80
YEDI                 : 21
error                : 

Nonterminals, with rules where they appear

N                    : 1 0
cmpdstmt             : 21 22 23 24 26 69 71 72
condition            : 21 65 65 66 66 71
dynamString          : 8 9 17 18 63
element              : 1 2
exp                  : 5 20 22 22 22 23 23 28 33 34 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 56 57 59 61 61 61 63 64 67 68 81 82
incrementsign        : 20
optelse              : 21 71
sign                 : 22 76
sliceexp             : 58 58
stmt                 : 4 69
variableArgs         : 26 30
variableexp          : 16 25 27 33 55 62
whilecond            : 24 79 79 80 80

Parsing method: LALR

state 0

    (0) S' -> . N
    (1) N -> . element NEWLINE N
    (2) N -> . element
    (3) N -> .
    (4) element -> . stmt
    (5) stmt -> . IDENTIFIER ASSIGNMENT exp
    (6) stmt -> . BAHIRA
    (7) stmt -> . ARKO
    (8) stmt -> . IDENTIFIER MA dynamString LEKHA SEMICOLON
    (9) stmt -> . IDENTIFIER MA dynamString LEKHA
    (10) stmt -> . IDENTIFIER BATA IDENTIFIER LEU
    (11) stmt -> . IDENTIFIER BANDAGARA
    (12) stmt -> . IDENTIFIER DEKHAU
    (13) stmt -> . IDENTIFIER LUKAU
    (14) stmt -> . IDENTIFIER BANAU
    (15) stmt -> . IDENTIFIER METAU
    (16) stmt -> . IDENTIFIER MA IDENTIFIER KORA variableexp
    (17) stmt -> . dynamString LEKHA
    (18) stmt -> . dynamString LEKHA SEMICOLON
    (19) stmt -> . IDENTIFIER LEU
    (20) stmt -> . IDENTIFIER incrementsign ASSIGNMENT exp
    (21) stmt -> . YEDI condition NEWLINE cmpdstmt optelse DIYE
    (22) stmt -> . SABEI IDENTIFIER ASSIGNMENT exp DEKHI exp SEMICOLON sign exp NEWLINE cmpdstmt BAISA
    (23) stmt -> . SABEI IDENTIFIER ASSIGNMENT exp DEKHI exp NEWLINE cmpdstmt BAISA
    (24) stmt -> . JABA SAMMA whilecond NEWLINE cmpdstmt BAJA
    (25) stmt -> . IDENTIFIER ASSIGNMENT LGPARA variableexp RGPARA
    (26) stmt -> . KAAM IDENTIFIER LPARA variableArgs RPARA NEWLINE cmpdstmt MAKA
    (27) stmt -> . IDENTIFIER LPARA variableexp RPARA
    (28) stmt -> . exp PATHAU
    (29) stmt -> . NEWLINE
    (63) dynamString -> . exp COMMA dynamString
    (64) dynamString -> . exp
    (36) exp -> . exp EQ exp
    (37) exp -> . exp LE exp
    (38) exp -> . exp GE exp
    (39) exp -> . exp NE exp
    (40) exp -> . exp LT exp
    (41) exp -> . exp GT exp
    (42) exp -> . exp PLUS exp
    (43) exp -> . exp MINUS exp
    (44) exp -> . exp TIMES exp
    (45) exp -> . exp DIVIDE exp
    (46) exp -> . exp POWER exp
    (47) exp -> . exp MODULUS exp
    (48) exp -> . exp RA exp
    (49) exp -> . exp WA exp
    (50) exp -> . IDENTIFIER
    (51) exp -> . STRING
    (52) exp -> . NUMBER
    (53) exp -> . MINUS NUMBER
    (54) exp -> . SUNYA
    (55) exp -> . LGPARA variableexp RGPARA
    (56) exp -> . IDENTIFIER LGPARA exp RGPARA
    (57) exp -> . LPARA exp RPARA
    (58) exp -> . IDENTIFIER LGPARA sliceexp COLON sliceexp RGPARA
    (61) exp -> . LPARA exp RPARA QUESTION exp COLON exp
    (62) exp -> . IDENTIFIER LPARA variableexp RPARA

    $end            reduce using rule 3 (N -> .)
    IDENTIFIER      shift and go to state 9
    BAHIRA          shift and go to state 4
    ARKO            shift and go to state 5
    YEDI            shift and go to state 1
    SABEI           shift and go to state 10
    JABA            shift and go to state 8
    KAAM            shift and go to state 6
    NEWLINE         shift and go to state 7
    STRING          shift and go to state 19
    NUMBER          shift and go to state 12
    MINUS           shift and go to state 3
    SUNYA           shift and go to state 16
    LGPARA          shift and go to state 15
    LPARA           shift and go to state 11

    dynamString                    shift and go to state 2
    N                              shift and go to state 14
    stmt                           shift and go to state 13
    exp                            shift and go to state 18
    element                        shift and go to state 17

state 1

    (21) stmt -> YEDI . condition NEWLINE cmpdstmt optelse DIYE
    (65) condition -> . condition RA condition
    (66) condition -> . condition WA condition
    (67) condition -> . exp BHAE
    (68) condition -> . exp NABHAE
    (36) exp -> . exp EQ exp
    (37) exp -> . exp LE exp
    (38) exp -> . exp GE exp
    (39) exp -> . exp NE exp
    (40) exp -> . exp LT exp
    (41) exp -> . exp GT exp
    (42) exp -> . exp PLUS exp
    (43) exp -> . exp MINUS exp
    (44) exp -> . exp TIMES exp
    (45) exp -> . exp DIVIDE exp
    (46) exp -> . exp POWER exp
    (47) exp -> . exp MODULUS exp
    (48) exp -> . exp RA exp
    (49) exp -> . exp WA exp
    (50) exp -> . IDENTIFIER
    (51) exp -> . STRING
    (52) exp -> . NUMBER
    (53) exp -> . MINUS NUMBER
    (54) exp -> . SUNYA
    (55) exp -> . LGPARA variableexp RGPARA
    (56) exp -> . IDENTIFIER LGPARA exp RGPARA
    (57) exp -> . LPARA exp RPARA
    (58) exp -> . IDENTIFIER LGPARA sliceexp COLON sliceexp RGPARA
    (61) exp -> . LPARA exp RPARA QUESTION exp COLON exp
    (62) exp -> . IDENTIFIER LPARA variableexp RPARA

    IDENTIFIER      shift and go to state 20
    STRING          shift and go to state 19
    NUMBER          shift and go to state 12
    MINUS           shift and go to state 3
    SUNYA           shift and go to state 16
    LGPARA          shift and go to state 15
    LPARA           shift and go to state 11

    exp                            shift and go to state 22
    condition                      shift and go to state 21

state 2

    (17) stmt -> dynamString . LEKHA
    (18) stmt -> dynamString . LEKHA SEMICOLON

    LEKHA           shift and go to state 23


state 3

    (53) exp -> MINUS . NUMBER

    NUMBER          shift and go to state 24


state 4

    (6) stmt -> BAHIRA .

    NEWLINE         reduce using rule 6 (stmt -> BAHIRA .)
    $end            reduce using rule 6 (stmt -> BAHIRA .)


state 5

    (7) stmt -> ARKO .

    NEWLINE         reduce using rule 7 (stmt -> ARKO .)
    $end            reduce using rule 7 (stmt -> ARKO .)


state 6

    (26) stmt -> KAAM . IDENTIFIER LPARA variableArgs RPARA NEWLINE cmpdstmt MAKA

    IDENTIFIER      shift and go to state 25


state 7

    (29) stmt -> NEWLINE .

    NEWLINE         reduce using rule 29 (stmt -> NEWLINE .)
    $end            reduce using rule 29 (stmt -> NEWLINE .)


state 8

    (24) stmt -> JABA . SAMMA whilecond NEWLINE cmpdstmt BAJA

    SAMMA           shift and go to state 26


state 9

    (5) stmt -> IDENTIFIER . ASSIGNMENT exp
    (8) stmt -> IDENTIFIER . MA dynamString LEKHA SEMICOLON
    (9) stmt -> IDENTIFIER . MA dynamString LEKHA
    (10) stmt -> IDENTIFIER . BATA IDENTIFIER LEU
    (11) stmt -> IDENTIFIER . BANDAGARA
    (12) stmt -> IDENTIFIER . DEKHAU
    (13) stmt -> IDENTIFIER . LUKAU
    (14) stmt -> IDENTIFIER . BANAU
    (15) stmt -> IDENTIFIER . METAU
    (16) stmt -> IDENTIFIER . MA IDENTIFIER KORA variableexp
    (19) stmt -> IDENTIFIER . LEU
    (20) stmt -> IDENTIFIER . incrementsign ASSIGNMENT exp
    (25) stmt -> IDENTIFIER . ASSIGNMENT LGPARA variableexp RGPARA
    (27) stmt -> IDENTIFIER . LPARA variableexp RPARA
    (50) exp -> IDENTIFIER .
    (56) exp -> IDENTIFIER . LGPARA exp RGPARA
    (58) exp -> IDENTIFIER . LGPARA sliceexp COLON sliceexp RGPARA
    (62) exp -> IDENTIFIER . LPARA variableexp RPARA
    (76) incrementsign -> . sign
    (77) incrementsign -> . TIMES
    (78) incrementsign -> . DIVIDE
    (74) sign -> . PLUS
    (75) sign -> . MINUS

    ASSIGNMENT      shift and go to state 30
    MA              shift and go to state 41
    BATA            shift and go to state 29
    BANDAGARA       shift and go to state 32
    DEKHAU          shift and go to state 42
    LUKAU           shift and go to state 31
    BANAU           shift and go to state 34
    METAU           shift and go to state 39
    LEU             shift and go to state 43
    LPARA           shift and go to state 37
    PATHAU          reduce using rule 50 (exp -> IDENTIFIER .)
    COMMA           reduce using rule 50 (exp -> IDENTIFIER .)
    EQ              reduce using rule 50 (exp -> IDENTIFIER .)
    LE              reduce using rule 50 (exp -> IDENTIFIER .)
    GE              reduce using rule 50 (exp -> IDENTIFIER .)
    NE              reduce using rule 50 (exp -> IDENTIFIER .)
    LT              reduce using rule 50 (exp -> IDENTIFIER .)
    GT              reduce using rule 50 (exp -> IDENTIFIER .)
    POWER           reduce using rule 50 (exp -> IDENTIFIER .)
    MODULUS         reduce using rule 50 (exp -> IDENTIFIER .)
    RA              reduce using rule 50 (exp -> IDENTIFIER .)
    WA              reduce using rule 50 (exp -> IDENTIFIER .)
    LEKHA           reduce using rule 50 (exp -> IDENTIFIER .)
    LGPARA          shift and go to state 28
    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 38
    PLUS            shift and go to state 36
    MINUS           shift and go to state 33

  ! PLUS            [ reduce using rule 50 (exp -> IDENTIFIER .) ]
  ! MINUS           [ reduce using rule 50 (exp -> IDENTIFIER .) ]
  ! TIMES           [ reduce using rule 50 (exp -> IDENTIFIER .) ]
  ! DIVIDE          [ reduce using rule 50 (exp -> IDENTIFIER .) ]

    incrementsign                  shift and go to state 35
    sign                           shift and go to state 40

state 10

    (22) stmt -> SABEI . IDENTIFIER ASSIGNMENT exp DEKHI exp SEMICOLON sign exp NEWLINE cmpdstmt BAISA
    (23) stmt -> SABEI . IDENTIFIER ASSIGNMENT exp DEKHI exp NEWLINE cmpdstmt BAISA

    IDENTIFIER      shift and go to state 44


state 11
